//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  email String [unique, not null]
  hashedPassword String [not null]
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  children children [not null]
  chatHistory chat_history [not null]
}

Table children {
  id Int [pk, increment]
  userId Int [not null]
  nickname String [not null]
  dateOfBirth DateTime [not null]
  gender String
  allergyInfo String[] [not null]
  moreInfo String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  user users [not null]
  records records [not null]
  chatHistory chat_history [not null]
  textChunks text_chunks [not null]
}

Table records {
  id BigInt [pk, increment]
  childId Int [not null]
  recordType String [not null]
  details Json
  recordTimestamp DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  child children [not null]
}

Table chat_history {
  id BigInt [pk, increment]
  userId Int [not null]
  childId Int
  userMessage String [not null]
  aiResponse String
  rawAiResponse String
  contextSummary String[] [not null]
  safetyFlags String
  feedback Int
  requestTimestamp DateTime [default: `now()`, not null]
  responseTimestamp DateTime
  user users [not null]
  child children
}

Table text_chunks {
  id BigInt [pk, increment]
  content String [not null]
  sourceType String [not null]
  sourceId Int [not null]
  childId Int [not null]
  metadata Json [not null, default: '{}']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [default: `now()`, not null]
  child children [not null]
}

Ref: children.userId > users.id [delete: Cascade]

Ref: records.childId > children.id [delete: Cascade]

Ref: chat_history.userId > users.id

Ref: chat_history.childId > children.id

Ref: text_chunks.childId > children.id [delete: Cascade]